# chrysaline

./: .gitignore  README.md  atom_v17d_exercises.py  atom_v17e_full.py  atom_v18_experiments.py  atom_v19_gen_ask.py  cli.py  pyproject.toml  test_calculator.py
.github/workflows/: tests.yml
chrysaline/: __init__.py  creature.py  generator.py  splitter.py  visitor.py  world.py
data/: experience.py  fairy_tales.py  math.py  nature.py  rules.py  stress_test.py  textbook.py
docs/: AIOS_LIVING_INFORMATION.md  AIOS_Living_Information_Documentation.docx  AIOS_PROJECT_STATUS.md  CHRYSALINE_ACTIVE_COGNITION_v3.md  CHRYSALINE_RESULTS.md
experiments/: apply_rule_test.py  bridge_natural.py  chinese_stress.py  competition_tests.py  exercises.py  feedback_test.py  five_experiments.py  gen_ask.py  immunity_test.py  japanese_test.py  lesson1_reading.py  lesson1_stream.py  level1_letters.py  level2_sentences.py  level3_raw_text.py  level3_read.py  level4_fairy_tales.py  level5_mixed.py  level6_textbook.py  level7_declensions.py  living_test.py  math_test.py  proof_of_generality.py  punctuation_after_level1.py  punctuation_bridge.py  punctuation_raw.py  punctuation_test.py  raw_text.py  stress_test.py  ten_minutes.py  think_test.py  wave_vs_feeding.py  zhi_shi_discovery.py  zhi_shi_vs_ky.py
src/: calculator.py
src/chrysaline/: __init__.py  editor.py
src/chrysaline.dist-info/: METADATA  top_level.txt
tests/: conftest.py  test_editor.py
