[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chrysaline"
version = "0.0.1"
description = "P2P Markdown Editor"
authors = [{ name = "ded_achtung", email = "tereboni21@gmail.com" }]
license = { text = "GPL-3.0-only" }
requires-python = ">=3.10"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/ded-achtung/chrysaline"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["chrysaline"]

[tool.coverage.report]
show_missing = true
fail_under = 80
